sumo/tests/od2trips/errors/false_options/testsuite.od2trips
# The output file name is not given
missing_output

# The output can not be build
unbuildable_output


